fix grid-box so it takes up the full width of the available space without overlapping the right margin

--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ body {
 }
 #grid-box {
     display: flex;
-    width: 100vw;
-    height: 100vw;
+    width: 100%;
+    height: auto;
     max-width: 1000px;
     max-height: 1000px;
+    aspect-ratio: 1/1;
 }
 #grid-container {
     display: flex;
